--- a/source/contacts.html
+++ b/source/contacts.html
@@ -91,12 +91,12 @@
               <p class="contacts__form-text">Мы обязательно свяжемся с вами в течение двух рабочих дней</p>
 
               <div class="contacts__form-container">
-                <div class="contacts__form-field form__field">
+                <div class="contacts__form-field form-input">
                   <label for="name" class="visually-hidden">Ваше имя</label>
                   <input id="name" type="text" name="name" placeholder="Ваше имя" required>
                 </div>
 
-                <div class="contacts__form-field form__field">
+                <div class="contacts__form-field form-input">
                   <input id="mail" type="email" name="mail" placeholder="Ваше e-mail" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2, 3}$" required>
                   <label for="mail" class="visually-hidden">Ваше e-mail</label>
                 </div>
@@ -134,12 +134,12 @@
         <h2 class="popup__title">Закажите VR планетарий</h2>
         <p class="popup__text">Оставьте ваши контактные данные, мы обработаем заявку в течении двух рабочих дней и перезвоним вам</p>
 
-        <div class="popup__input form__field">
+        <div class="popup__input form-input">
           <label for="popup-name" class="visually-hidden">Ваше имя</label>
           <input id="popup-name" type="text" name="user-name" placeholder="Ваше имя" required>
         </div>
 
-        <div class="popup__input form__field">
+        <div class="popup__input form-input">
           <label for="popup-phone" class="visually-hidden">Ваш телефон</label>
           <input id="popup-phone" type="tel" name="user-phone" placeholder="Ваш телефон" pattern=".{16,}" required>
         </div>
