--- a/source/main.html
+++ b/source/main.html
@@ -78,22 +78,21 @@
             </div>
           </div>
 
-          <div class="scroll scroll--intro">
-            <div class="scroll__container">
-              <ul class="scroll__social">
-                <li class="scroll__social-item">
-                  <a class="scroll__social-link scroll__social-link--fb" href="#"><svg class="scroll__social-image" width="11" height="22"><use xlink:href="img/sprite.svg#icon-fb"></use></svg><span class="visually-hidden">facebook</span></a>
-                </li>
-                <li class="scroll__social-item">
-                  <a class="scroll__social-link scroll__social-link--vk" href="#"><svg class="scroll__social-image" width="28" height="15"><use xlink:href="img/sprite.svg#icon-vk"></use></svg><span class="visually-hidden">вконтакте</span></a>
-                </li>
-              </ul>
-              <p class="scroll__text">
-                <a class="scroll__link" href="product.html">Скролл вниз</a>
-              </p>
-            </div>
+        </div>
+        <div class="scroll scroll--intro">
+          <div class="scroll__container">
+            <ul class="scroll__social">
+              <li class="scroll__social-item">
+                <a class="scroll__social-link scroll__social-link--fb" href="#"><svg class="scroll__social-image" width="11" height="22"><use xlink:href="img/sprite.svg#icon-fb"></use></svg><span class="visually-hidden">facebook</span></a>
+              </li>
+              <li class="scroll__social-item">
+                <a class="scroll__social-link scroll__social-link--vk" href="#"><svg class="scroll__social-image" width="28" height="15"><use xlink:href="img/sprite.svg#icon-vk"></use></svg><span class="visually-hidden">вконтакте</span></a>
+              </li>
+            </ul>
+            <p class="scroll__text">
+              <a class="scroll__link" href="product.html">Скролл вниз</a>
+            </p>
           </div>
-
         </div>
       </main>
 
@@ -116,12 +115,12 @@
           <button class="popup__close-button popup__close-button--order" type="button"><span class="visually-hidden">Закрыть</span></button>
           <h2 class="popup__title">Закажите VR планетарий</h2>
           <p class="popup__text">Оставьте ваши контактные данные, мы обработаем заявку в течении двух рабочих дней и перезвоним вам</p>
-          <div class="popup__input form__field">
+          <div class="popup__input form-input">
             <label for="popup-name" class="visually-hidden">Ваше имя</label>
             <input id="popup-name" type="text" name="user-name" placeholder="Ваше имя" required>
           </div>
 
-          <div class="popup__input form__field">
+          <div class="popup__input form-input">
             <label for="popup-phone" class="visually-hidden">Ваш телефон</label>
             <input id="popup-phone" type="tel" name="user-phone" placeholder="Ваш телефон" pattern=".{16,}" required>
           </div>
