--- a/source/product.html
+++ b/source/product.html
@@ -63,19 +63,19 @@
     </header>
 
     <main class="page-main">
-      <h1 class="visually-hidden">Информация о продукте</h1>
       <div class="product">
+        <h1 class="visually-hidden">Информация о продукте</h1>
         <p class="product__title">Что такое VR-планетарий?</p>
-          <div class="product__wrapper">
-            <div class="product__text-container">
-              <p class="product__text">Это образовательная программа, использующая технологию виртуальной реальности.</p>
-              <p class="product__text">Зрителям выдаются очки виртуальной реальности, оператор запускает сеанс планетария на всех очках одновременно. В коллекции фильмов идут обучающие картины о космосе, астрономии  и обществознании.</p>
-              <p class="product__text">За счёт реалестичности  и имитации игры такое обучение повышает мотивацию и стимулирует активную мозговую деятельность ребёнка.</p>
-            </div>
+        <div class="product__wrapper">
+          <div class="product__text-container">
+            <p class="product__text">Это образовательная программа, использующая технологию виртуальной реальности.</p>
+            <p class="product__text">Зрителям выдаются очки виртуальной реальности, оператор запускает сеанс планетария на всех очках одновременно. В коллекции фильмов идут обучающие картины о космосе, астрономии  и обществознании.</p>
+            <p class="product__text">За счёт реалестичности  и имитации игры такое обучение повышает мотивацию и стимулирует активную мозговую деятельность ребёнка.</p>
+          </div>
 
-            <div class="product__slider">
-              <p class="product__slider-content">Что показываем в планетарии</p>
-              <div class="swiper-container">
+          <div class="product__slider">
+            <p class="product__slider-content">Что показываем в планетарии</p>
+            <div class="swiper-container">
               <ul class="product__slider-list swiper-wrapper">
 
                 <li class="product__slide swiper-slide">
@@ -120,7 +120,7 @@
                 </div>
               </div>
 
-            </div>
+          </div>
           </div>
         </div>
       </div>
@@ -128,6 +128,7 @@
       <div class="scroll">
         <a class="scroll__link scroll__link-arrow" href="explanation.html"><span class="visually-hidden">Скролл вниз</span></a>
       </div>
+
     </main>
 
     <footer class="page-footer">
@@ -149,12 +150,12 @@
         <button class="popup__close-button popup__close-button--order" type="button"><span class="visually-hidden">Закрыть</span></button>
         <h2 class="popup__title">Закажите VR планетарий</h2>
         <p class="popup__text">Оставьте ваши контактные данные, мы обработаем заявку в течении двух рабочих дней и перезвоним вам</p>
-        <div class="popup__input form__field">
+        <div class="popup__input form-input">
           <label for="popup-name" class="visually-hidden">Ваше имя</label>
           <input id="popup-name" type="text" name="user-name" placeholder="Ваше имя" required>
         </div>
 
-        <div class="popup__input form__field">
+        <div class="popup__input form-input">
           <label for="popup-phone" class="visually-hidden">Ваш телефон</label>
           <input id="popup-phone" type="tel" name="user-phone" placeholder="Ваш телефон" pattern=".{16,}" required>
         </div>
