--- a/source/technology.html
+++ b/source/technology.html
@@ -138,12 +138,12 @@
         <button class="popup__close-button popup__close-button--order" type="button"><span class="visually-hidden">Закрыть</span></button>
         <h2 class="popup__title">Закажите VR планетарий</h2>
         <p class="popup__text">Оставьте ваши контактные данные, мы обработаем заявку в течении двух рабочих дней и перезвоним вам</p>
-        <div class="popup__input form__field">
+        <div class="popup__input form-input">
           <label for="popup-name" class="visually-hidden">Ваше имя</label>
           <input id="popup-name" type="text" name="user-name" placeholder="Ваше имя" required>
         </div>
 
-        <div class="popup__input form__field">
+        <div class="popup__input form-input">
           <label for="popup-phone" class="visually-hidden">Ваш телефон</label>
           <input id="popup-phone" type="tel" name="user-phone" placeholder="Ваш телефон" pattern=".{16,}" required>
         </div>
