--- a/source/contacts.html
+++ b/source/contacts.html
@@ -97,7 +97,7 @@
                 </div>
 
                 <div class="contacts__form-field form-field">
-                  <input id="mail" type="email" name="mail" placeholder="Ваше e-mail" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2, 3}$" required>
+                  <input id="mail" type="email" name="mail" placeholder="Ваше e-mail" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>
                   <label for="mail" class="visually-hidden">Ваше e-mail</label>
                 </div>
 
