--- a/source/product.html
+++ b/source/product.html
@@ -147,25 +147,7 @@
       </ul>
     </footer>
 
-    <div class="popup popup--send">
-      <div class="popup__wrapper"></div>
-      <form>
-        <button class="popup__close-button popup__close-button--order" type="button"><span class="visually-hidden">Закрыть</span></button>
-        <h2 class="popup__title">Закажите VR планетарий</h2>
-        <p class="popup__text">Оставьте ваши контактные данные, мы обработаем заявку в течении двух рабочих дней и перезвоним вам</p>
-        <div class="popup__input form-field">
-          <label for="popup-name" class="visually-hidden">Ваше имя</label>
-          <input id="popup-name" type="text" name="user-name" placeholder="Ваше имя" required>
-        </div>
-
-        <div class="popup__input form-field">
-          <label for="popup-phone" class="visually-hidden">Ваш телефон</label>
-          <input id="popup-phone" type="tel" name="user-phone" placeholder="Ваш телефон" pattern=".{16,}" required>
-        </div>
-
-        <button class="button popup__send-button" type="submit">Отправить</button>
-      </form>
-    </div>
+    <include src="source/components/popup.html"></include>
 
     <script src="js/main.min.js" async></script>
 
